<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#654BFB"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ProfilePicButton"/>

    <Button
        android:id="@+id/btnPersonalDetails"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/PersonalDetailsButton"/>

    <Button
        android:id="@+id/btnSummary"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SummaryButton"/>

    <Button
        android:id="@+id/btnEducation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/EducationButton"/>

    <Button
        android:id="@+id/btnExperience"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ExperienceButton"/>

    <Button
        android:id="@+id/btnCertifications"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Certification"/>

    <Button
        android:id="@+id/btnReferences"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ReferencesButton"/>

</LinearLayout>
